# vscp-helper-lib

./: .clang-format  .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  LICENSE  Makefile.in  README.md  VERSION.m4  build_debian_all.sh  build_debian_package.sh  clean_for_dist  config.h  config.status  configure  configure.ac  test.sh  update_common_files.sh  vscpcanaldeviceif.cpp  vscpcanaldeviceif.h  vscphelperlib.cpp  vscphelperlib.h
.github/workflows/: build.yml  msbuild.yml
_vscp_common/: README.md  knownnodes.cpp  version.h  vscp.h  vscp_bootdevice.h  vscp_bootloader.h  vscpmulticast.cpp  web_template.h
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
debian_orig/: README.Debian  README.source  changelog  control  copyright  libvscphelper-dev.dirs  libvscphelper-dev.install  libvscphelper-dev.links  libvscphelper-dev.manpages  libvscphelper.dirs  libvscphelper.install  libvscphelper.links  libvscphelper.manpages  manpages  rules  vscphelperlib-dev.install  vscphelperlib.install
debug/: conf_standard.xml
debug/linux/: vscpd.xml
docs/: README.md  _coverpage.md  _sidebar.md  bindings.md  book.json  bottom_copyright.md  c_using.md  canal_libcanal.md  canal_using.md  class_checkReturnValue.md  class_createRemoteVariable.md  class_deleteRemoteVariable.md  class_doClrInputQueue.md  class_doCmdBlockingReceive,.md  class_doCmdBlockingReceive2.md  class_doCmdClear.md  class_doCmdClose.md  class_doCmdDLLVersion.md  class_doCmdDataAvailable.md  class_doCmdEnterReceiveLoop.md  class_doCmdFilter.md  class_doCmdFilter2.md  class_doCmdFilter_canal.md  class_doCmdGetChannelID.md  class_doCmdGetChannelInfo.md  class_doCmdGetDriverInfo.md  class_doCmdGetGUID.md  class_doCmdGetGUID2.md  class_doCmdGetLevel.md  class_doCmdInterfaceList.md  class_doCmdMask_canal.md  class_doCmdOpen.md  class_doCmdOpen2.md  class_doCmdQuitReceiveLoop.md  class_doCmdReceive.md  class_doCmdReceiveEx.md  class_doCmdReceiveLevel1.md  class_doCmdSend.md  class_doCmdSendEx.md  class_doCmdSendLevel1.md  (+331 more)
docs/old/: bindings.md  classes_intro.md  classes_start.md  classes_vscpremotetcpipif_metods.md  data_coding.md  decision_matrix.md  document_history.md  globally_unique_identifiers.md  graphic_lib_api.md  helper_lib_api_communication.md  helper_lib_api_helpers.md  helper_lib_api_initialization.md  helper_lib_api_initilaization.md  helper_lib_api_tables.md  helper_lib_api_variables.md  introduction.md  level_i_events.md  level_ii_events.md  level_ii_specifics.md  module_description_file.md  non_graphic_lib_api.md  physical_level_lower_level_protocols.md  register_abstraction_model.md  sidebar.md  start.md  using_the_helper_api.md  vscp_boot_loader_algorithm.md  vscp_class_usage_history.md  vscp_level_i_specifics.md  vscp_multicast.md
linux/: .gitignore  Makefile.in  builddist.sh  description-pak  libvscphelper.cpp  libvscphelper.h  libvscphelper.so.14.0.0  libvscphelper.so.2.0.0  test  test.cpp  vscphelpmodule.c
linux/_test/: README.md  bigtest  bigtest.c  example1  send1  send_periodic  simple_tls_client  simple_tls_client.c  simple_tls_server  stcp_tls_client  stcptest  stcptest.c
linux/examples/: bigtest  example1  send1  send_periodic  simple_tls_client  simple_tls_server  stcp_tls_client  stcptest
linux/nbproject/: configurations.xml  project.xml
linux/nbproject/private/: Default.properties  configurations.xml
linux/samples/: README.md  bigtest  bigtest.c  example1  example1.c  send1  send1.c  send_periodic.c  simple_tls_server.c  stcp_tls_client
linux/samples/bigtest/: CMakeLists.txt  README.md  bigtest.c
m4/: Makefile.in
man/: CMakeLists.txt  libvscphelper-dev.3  libvscphelper-dev.3.md  libvscphelper.3  libvscphelper.3.md  make_man_pages  vscpworks.1.md
resources/debpkg/: libvscphelper-dev.install  libvscphelper.links  shlibs
resources/nsis/: NSIS.definitions.nsh  NSIS.template.in
src/: vscphelperlib.cpp  vscphelperlib.h
test/simple/: .Makefile.swp  Makefile  simple  simple.c
tests/: .gitignore  Makefile.in  README.md  unittest.cpp
tests/alltest/: CMakeLists.txt  unittest.cpp
tests/connecttest/: CMakeLists.txt  unittest.cpp
tests/longtest/: CMakeLists.txt  unittest.cpp
tests/sendevent/: unittest.cpp
windows/: StdAfx.h  dlldrvobj.cpp  dlldrvobj.h  libvscphelper.cpp  libvscphelper.h  pch.cpp  pch.h  vscphelper.rc  vscphelperdll.cpp  vscphelperdll.h
windows/samples/csharp/: test.cpp
windows/samples/vstudio/simple/: .gitignore  test-win.sln
windows/samples/vstudio/simple/test-win/: .gitignore  Main.cpp  test-win.vcxproj
windows/test/: test.cpp
